--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -6,6 +6,9 @@
 - name: Ensure "{{ idp_home }}/flows/oidc/authorize" dir exists
   file: path="{{ idp_home }}/flows/oidc/authorize" state=directory
 
+- name: Ensure "{{ idp_home }}/flows/oidc/register" dir exists
+  file: path="{{ idp_home }}/flows/oidc/register" state=directory
+
 - name: Copy oidc flow, views and beans
   copy:
     src: "{{ item.src }}"
@@ -17,6 +20,8 @@
   with_items:
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/authorize/oidc-flow.xml", dest: "{{ idp_home }}/flows/oidc/authorize/oidc-flow.xml" }
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/authorize/oidc-beans.xml", dest: "{{ idp_home }}/flows/oidc/authorize/oidc-beans.xml" }
+    - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/register/oidc-flow.xml", dest: "{{ idp_home }}/flows/oidc/register/oidc-flow.xml" }
+    - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/register/oidc-beans.xml", dest: "{{ idp_home }}/flows/oidc/register/oidc-beans.xml" }
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/views/oidc-error.vm", dest: "{{ idp_home }}/views/oidc-error.vm" }
 
 
