--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -18,6 +18,7 @@ See LICENSE.txt file in the root directory of this repository for the copyright/
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
         <shib.idp.version>3.3.0</shib.idp.version>
+        <opensaml.version>3.3.0</opensaml.version>
         <checkstyle.version>2.17</checkstyle.version>
         <checkstyle.configLocation>
             ../conf/checkstyle.xml
@@ -50,6 +51,11 @@ See LICENSE.txt file in the root directory of this repository for the copyright/
                 <groupId>com.nimbusds</groupId>
                 <artifactId>oauth2-oidc-sdk</artifactId>
                 <version>5.36</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opensaml</groupId>
+                <artifactId>opensaml-security-api</artifactId>
+                <version>${opensaml.version}</version>
             </dependency>
             <dependency>
                <groupId>net.shibboleth.idp</groupId>
