issuer/entityid to https//service_name

--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -75,6 +75,7 @@
   lineinfile: dest={{ idp_home }}/conf/idp.properties regexp="^#?\s*({{ item.option }}\s*=)" backrefs=yes  line="\\1 {{ item.value }}"
   with_items:
     - { option: 'idp.session.StorageService', value: 'shibboleth.StorageService' }
+    - { option: 'idp.entityID', value: 'https://{{ service_name }}' }
 
 - name: Add one trusted test SP
   blockinfile:
