--- a/idp-oidc-extension-impl/pom.xml
+++ b/idp-oidc-extension-impl/pom.xml
@@ -25,6 +25,10 @@
 			<groupId>net.shibboleth.idp</groupId>
 			<artifactId>idp-attribute-resolver-spring</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.opensaml</groupId>
+            <artifactId>opensaml-storage-api</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>net.shibboleth.idp</groupId>
 			<artifactId>idp-profile-api</artifactId>
