--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -58,6 +58,11 @@ See LICENSE.txt file in the root directory of this repository for the copyright/
                 <version>${opensaml.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.opensaml</groupId>
+                <artifactId>opensaml-storage-api</artifactId>
+                <version>${opensaml.version}</version>
+            </dependency>
+            <dependency>
                <groupId>net.shibboleth.idp</groupId>
                <version>${shib.idp.version}</version>
                <artifactId>idp-authn-api</artifactId>
