deploy attribute-resolver.xml with oidc policyrequirementrule for scopes

--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -130,31 +130,6 @@
     content: |
          idp.signing.oidc.key= %{idp.home}/credentials/idp-signing-rs256.jwk
 
-- name: Add metadata filter for trusted test SP
-  blockinfile:
-    dest: "{{ idp_home }}/conf/attribute-filter.xml"
-    marker: "<!-- {mark} ANSIBLE MANAGED BLOCK -->"
-    insertbefore: "</AttributeFilterPolicyGroup>"
-    content: |
-         <AttributeFilterPolicy id="demo_rp">
-             <PolicyRequirementRule xsi:type="Requester" value="demo_rp" />
-             <AttributeRule attributeID="eduPersonPrincipalName">
-                 <PermitValueRule xsi:type="ANY" />
-             </AttributeRule>
-             <AttributeRule attributeID="age">
-                 <PermitValueRule xsi:type="ANY" />
-             </AttributeRule>
-             <AttributeRule attributeID="eduPersonAffiliation">
-                 <PermitValueRule xsi:type="ANY" />
-             </AttributeRule>
-             <AttributeRule attributeID="uid">
-                 <PermitValueRule xsi:type="ANY" />
-             </AttributeRule>
-             <AttributeRule attributeID="mail">
-                 <PermitValueRule xsi:type="ANY" />
-             </AttributeRule>
-         </AttributeFilterPolicy>
-
 - name: Add OIDC.SSO profile configuration to relying-party-system.xml
   blockinfile:
     dest: "{{ idp_home }}/system/conf/relying-party-system.xml"
@@ -252,6 +227,11 @@
   template:
     src: attribute-resolver.xml
     dest: "{{ idp_home }}/conf/attribute-resolver.xml"
+
+- name: Setting modified attribute-filter.xml
+  template:
+    src: attribute-filter.xml
+    dest: "{{ idp_home }}/conf/attribute-filter.xml"
 
 - name: Setting modified general-authn.xml
   template:
