--- a/idp-oidc-extension-impl/pom.xml
+++ b/idp-oidc-extension-impl/pom.xml
@@ -53,6 +53,11 @@
 			<version>${shib.idp.version}</version>
 			<artifactId>idp-attribute-filter-impl</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
 
 	</dependencies>
 	<build>
