--- a/idp-oidc-extension-impl/pom.xml
+++ b/idp-oidc-extension-impl/pom.xml
@@ -52,6 +52,10 @@
             <artifactId>idp-attribute-filter-impl</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.geant.fedoidc</groupId>
+            <artifactId>oidcfederatedmetadatastatement</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
