--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -12,6 +12,9 @@
 - name: Ensure "{{ idp_home }}/flows/oidc/register" dir exists
   file: path="{{ idp_home }}/flows/oidc/register" state=directory
 
+- name: Ensure "{{ idp_home }}/flows/oidc/webfinger" dir exists
+  file: path="{{ idp_home }}/flows/oidc/webfinger" state=directory
+
 - name: Ensure "{{ idp_home }}/static" dir exists
   file: path="{{ idp_home }}/static/" state=directory
 
@@ -34,43 +37,9 @@
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/authorize/oidc-beans.xml", dest: "{{ idp_home }}/flows/oidc/authorize/oidc-beans.xml" }
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/register/oidc-flow.xml", dest: "{{ idp_home }}/flows/oidc/register/oidc-flow.xml" }
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/register/oidc-beans.xml", dest: "{{ idp_home }}/flows/oidc/register/oidc-beans.xml" }
+    - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/webfinger/oidc-flow.xml", dest: "{{ idp_home }}/flows/oidc/webfinger/oidc-flow.xml" }
+    - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/webfinger/oidc-beans.xml", dest: "{{ idp_home }}/flows/oidc/webfinger/oidc-beans.xml" }
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/views/oidc-error.vm", dest: "{{ idp_home }}/views/oidc/authorize-error.vm" }
-
-## OIDCFED library stuff start
-
-- name: Set surveymanager and jetty install based facts
-  set_fact:
-   oidcfedlib_src_dir: /opt/oidcfed-library
-
-- name: Install packages for compiling oidcfed library
-  package: name={{ item }} state=present use=yum
-  with_items:
-    - maven
-    - git
-
-- name: Create directory for oidcfed library
-  file: path="{{ oidcfedlib_src_dir }}" state=directory mode=0755 owner=root group=root
-
-- name: Fetch oidcfed library from GitHub
-  git: repo=https://github.com/alejandro-perez/OIDCFederatedMetadataStatement.git dest="{{ oidcfedlib_src_dir }}"
-
-- name: Compile oidcfed library
-  shell: "/usr/bin/mvn clean package"
-  args:
-    chdir: "{{ oidcfedlib_src_dir }}"
-
-- name: Get the filename for the oidcfed library
-  shell: "ls {{ oidcfedlib_src_dir }}/target/*.jar"
-  register: oidcfed_library_files
-
-- name: Copy oidcfed library for building new idp.war
-  copy:
-    src: "{{ item }}"
-    dest: "{{ idp_home }}/edit-webapp/WEB-INF/lib/"
-    remote_src: yes
-  with_items: "{{ oidcfed_library_files.stdout_lines }}"
-
-## OIDCFED library stuff end
 
 - name: Copy selected JARs for building new idp.war
   copy:
@@ -89,6 +58,7 @@
     - "{{ playbook_dir }}/idp-oidc-extension-impl/target/dependency/commons-collections4-*.jar"
     - "{{ playbook_dir }}/idp-oidc-extension-impl/target/dependency/gson-*.jar"
     - "{{ playbook_dir }}/idp-oidc-extension-impl/target/dependency/idp-oidc-extension-api-*.jar"
+    - "{{ playbook_dir }}/idp-oidc-extension-impl/target/dependency/oidcfederatedmetadatastatement-*.jar"
     - "{{ playbook_dir }}/idp-oidc-extension-impl/target/idp-oidc-extension-impl-*.jar"
 
 - name: Build new idp.war
@@ -111,6 +81,14 @@
   with_items:
     - { option: 'idp.session.StorageService', value: 'shibboleth.StorageService' }
     - { option: 'idp.entityID', value: 'https://{{ service_name }}' }
+
+- name: Set oidc issuer to idp.properties
+  blockinfile:
+    dest: "{{ idp_home }}/conf/idp.properties"
+    marker: "# {mark} ANSIBLE MANAGER BLOCK"
+    insertafter: "idp.entityID"
+    content: |
+         idp.oidc.issuer= https://{{ service_name }}
 
 - name: Add one trusted test SP
   blockinfile:
@@ -250,7 +228,7 @@
 - name: Set oidc credential to idp.properties       
   blockinfile:
     dest: "{{ idp_home }}/conf/idp.properties"
-    marker: "<!-- {mark} ANSIBLE MANAGED BLOCK -->"
+    marker: "# {mark} ANSIBLE MANAGED BLOCK"
     insertafter: "idp.signing.key"
     content: |
          idp.signing.oidc.key= %{idp.home}/credentials/idp-signing-rs256.jwk
