from stored to computed

--- a/roles/oidc-extension/templates/oidc-subject.properties
+++ b/roles/oidc-extension/templates/oidc-subject.properties
@@ -1,9 +1,21 @@
-#idp.oidc.subject.useUnfilteredAttributes = true
-#idp.oidc.subject.algorithm = SHA
-#idp.oidc.subject.computed = shibboleth.oidc.subject.ComputedPersistentIdGenerator
-#idp.oidc.subject.store = MyPersistentIdStore
 
-idp.oidc.subject.generator = shibboleth.oidc.subject.StoredPersistentIdGenerator
+# Subject Identifiers can be computed on the fly with a hash, or managed in a database
+
+# For computed IDs, set a source attribute and a secret salt:
+
 idp.oidc.subject.sourceAttribute = uid
+#idp.oidc.subject.useUnfilteredAttributes = true
+
+# Do *NOT* share the salt with other people, it's like divulging your private key.
+#idp.oidc.subject.algorithm = SHA
 idp.oidc.subject.salt = this_too_should_be_ch4ng3d
+
+# To use a database, use shibboleth.oidc.subject.StoredPersistentIdGenerator
+idp.oidc.subject.generator = shibboleth.oidc.subject.ComputedPersistentIdGenerator
+
+# For basic use, set this to a JDBC DataSource bean name:
 idp.oidc.subject.dataSource = shibboleth.JPAStorageService.DataSource
+# For advanced use, set to a bean inherited from shibboleth.JDBCPersistentIdStore
+#idp.oidc.subject.store = MyPersistentIdStore
+# Set to an empty property to skip hash-based generation of first stored ID
+#idp.oidc.subject.computed = shibboleth.oidc.subject.ComputedPersistentIdGenerator
