--- a/idp-oidc-extension-impl/pom.xml
+++ b/idp-oidc-extension-impl/pom.xml
@@ -73,6 +73,12 @@
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
+       <dependency>
+           <groupId>net.shibboleth.idp</groupId>
+           <artifactId>idp-attribute-resolver-spring</artifactId>
+           <type>test-jar</type>
+           <scope>test</scope>
+       </dependency>
     </dependencies>
     <build>
         <plugins>
