--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -141,6 +141,13 @@
                 <type>test-jar</type>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>net.shibboleth.idp</groupId>
+                <version>${shib.idp.version}</version>
+                <artifactId>idp-attribute-resolver-spring</artifactId>
+                <type>test-jar</type>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
