test deps added

--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -168,6 +168,20 @@
                 <type>test-jar</type>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.opensaml</groupId>
+                <version>${shib.idp.version}</version>
+                <artifactId>opensaml-profile-impl</artifactId>
+                <type>test-jar</type>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.opensaml</groupId>
+                <version>${shib.idp.version}</version>
+                <artifactId>opensaml-profile-api</artifactId>
+                <type>test-jar</type>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
