--- a/idp-oidc-extension-impl/pom.xml
+++ b/idp-oidc-extension-impl/pom.xml
@@ -96,6 +96,18 @@
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
+       <dependency>
+           <groupId>org.opensaml</groupId>
+           <artifactId>opensaml-profile-impl</artifactId>
+           <type>test-jar</type>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.opensaml</groupId>
+           <artifactId>opensaml-profile-api</artifactId>
+           <type>test-jar</type>
+           <scope>test</scope>
+       </dependency>
     </dependencies>
     <build>
         <plugins>
